# tartigrade

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT-GUIDE.md  Makefile  PLAN-REVISE.md  PLAN.md  README.md  SPRINT-1-PLAN.md  TARDIGRADE-CI-PLAN.md  TECHNOLOGY-STACK.md
.github/workflows/: combined-release.yml  node-ci.yml  rust-ci.yml
.vibe/: instructions.md  project_plan.md
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  models.rs
docker/: docker-compose.yml
docs/: API-SPECIFICATION.md  DATABASE-SCHEMA.md  DEPLOYMENT.md  PLUGIN-DEVELOPMENT.md  RUST-GUIDE.md  SECURITY.md
modules/git/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  config.toml  us-002-TODO.md
modules/git/migrations/: 20260619000000_create_repositories.table.sql  20260619000001_create_branches.table.sql  20260619000002_create_commits.table.sql  20260620000000_create_branches.table.sql  20260621000000_create_commits.table.sql
modules/git/proto/: git.proto
modules/git/protos/: git_service.proto
modules/git/src/: config.rs  db.rs  error.rs  gateway.rs  handler.rs  lib.rs  main.rs  main_gateway.rs  models.rs  repository.rs  routes.rs  service.rs
modules/git/src/gateway/: config.rs  middleware.rs  mod.rs  router.rs
modules/git/src/graphql/: mod.rs  playground.rs  resolvers.rs  schema.rs
modules/git/src/grpc/: client.rs  git.rs  mod.rs  server.rs
modules/git/src/handler/: branch.rs  commit.rs  mod.rs  repository.rs
modules/git/src/models/: branch.rs  commit.rs
modules/git/src/repository/: branch.rs  commit.rs
modules/git/tests/integration/: branch_test.rs  commit_test.rs  mod.rs
modules/git/tests/unit/: branch.rs  commit.rs  mod.rs  repository.rs
ui/git/: .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/git/src/: App.tsx  main.tsx  vite-env.d.ts
ui/git/src/components/: index.ts
ui/git/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  ErrorMessage.tsx  Input.tsx  Loading.tsx  Modal.tsx  Pagination.tsx  Textarea.tsx  index.ts
ui/git/src/components/git/: BranchCard.tsx  BranchList.tsx  RepositoryCard.tsx  index.ts
ui/git/src/components/layout/: MainLayout.tsx
ui/git/src/graphql/: mutations.ts  queries.ts
ui/git/src/hooks/: useRepositories.ts  useRepository.ts
ui/git/src/pages/: Dashboard.tsx  index.ts
ui/git/src/pages/Branches/: List.tsx
ui/git/src/pages/Repository/: Create.tsx  Detail.tsx  List.tsx  index.ts
ui/git/src/routes/: index.tsx  paths.ts
ui/git/src/services/: gitService.ts
ui/git/src/styles/: global.css
ui/git/src/types/: git.ts
ui/git/src/utils/: formatters.ts  index.ts
