[package]
name = "tardigrade-git"
version = "0.1.0"
edition = "2021"
authors = ["Tardigrade-CI Team"]
description = "Git module for Tardigrade-CI"
license = "AGPL-3.0"
readme = "README.md"
keywords = ["git", "ci", "tardigrade"]
categories = ["development-tools", "version-control"]

[lib]
name = "tardigrade_git"
path = "src/lib.rs"

[[bin]]
name = "tardigrade-git"
path = "src/main.rs"

[dependencies]
# Web framework - using rustls for TLS, disable default features to avoid native-tls
axum = { version = "0.7", features = ["json", "multipart", "ws", "query"], default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util", "net", "time"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"], default-features = false }

# Database - using rustls without native-tls
# Note: sqlx with postgres feature requires native-tls by default, so we need to be careful
# We'll use the postgres feature but with rustls runtime
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls", "json", "migrate"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.4", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# HTTP client - using rustls
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
# Testing
mockall = "0.11"
serial_test = "2.0"

# SQLx test utilities - using rustls
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls", "json", "migrate"], default-features = false }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[features]
default = []
integration-test = []

[package.metadata.sqlx]
database-url = "postgres://user:password@localhost:5432/tardigrade"
migrate-dir = "migrations"
